# bitgrinder_v2

./: .gitignore  CMakeLists.txt  README.md  build.sh
libs/: CMakeLists.txt
src/bitgrinder/: CMakeLists.txt
src/bitgrinder/include/: bitgrinder.hpp
src/bitgrinder/include/system/: json.hpp  strtk.hpp
src/bitgrinder/include/system/testing/: btgtest.hpp
src/bitgrinder/system/testing/: btgtest.cpp
src/testing/: CMakeLists.txt  benchmark.cpp  testing.cpp
src/testing/include/: benchmark.hpp  testing.hpp
src/testing/include/system/: curled.hpp  json.hpp  systatus.hpp
src/testing/include/system/testing/: catch.hpp
src/testing/system/: curled.cpp
